# Partnerships-Manager-Bot

./: .gitignore  alembic.ini  docker-compose.yaml  pyproject.toml  readme.md  technical_specification.md  template.env
pmbot/: Dockerfile  alembic.ini  main.py  pyproject.toml  start.sh
pmbot/cogs/help/: __init__.py  embeds.py  enums.py  views.py
pmbot/cogs/partnerships/: __init__.py  cog.py
pmbot/cogs/settings/: __init__.py  cog.py
pmbot/core/: __init__.py  config.py  database.py  utils.py
pmbot/migrations/: env.py
pmbot/migrations/versions/: 3e2019ed96f7_fix.py  5aab0f746801_create_guilds_partners.py  83bc54675d34_fix_uq.py
pmbot/models/: __init__.py  guild.py  mixins.py  partner.py
pmbot/services/guilds/: __init__.py  service.py
pmbot/services/partners/: __init__.py  service.py
